--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Micah Graphics Studio</title>
+  <title>Vos créations Graphics Studio</title>
   <style>
     body {
       font-family: Arial, sans-serif;
