--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     overflow: hidden;
     padding-top: 80px;  /* space from top */
     z-index: 1;
-    background-image: url('image.jpg');
+    background-image: url('6caa159a93be95af84cca3ea88c78bcd.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
