--- a/index.html
+++ b/index.html
@@ -33,14 +33,51 @@
             50% { opacity: 1; }
             100% { transform: translateY(-100vh) rotate(360deg); opacity: 0.3; }
         }
-      /* Hero text adjustments */
+ /* Hero text default for desktop */
 .hero-container h1 {
-    font-size: 64px;        /* bigger / broader */
+    font-size: 48px;       /* default desktop size */
     margin-bottom: 15px;
     z-index: 2;
-    color: #FFD700;         /* bright gold */
-    text-shadow: 0 0 20px #FFD700, 0 0 30px #FFD700, 0 0 40px #FFD700; /* sharper glow */
+    color: #FFD700;        /* bright gold */
+    text-shadow: 0 0 20px #FFD700, 0 0 30px #FFD700, 0 0 40px #FFD700;
     line-height: 1.1;
+    text-align: center;
+}
+
+/* Hero container adjustments for mobile */
+.hero-container {
+    position: relative;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start; 
+    align-items: center;
+    text-align: center;
+    overflow: hidden;
+    padding-top: 60px;  /* space from top */
+    z-index: 1;
+    background-image: url('image.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+/* MOBILE VIEW: screens smaller than 768px */
+@media screen and (max-width: 768px) {
+    .hero-container h1 {
+        font-size: 36px;   /* smaller for phone */
+        margin-bottom: 10px;
+    }
+
+    .hero-container p {
+        font-size: 16px;   /* adjust paragraph */
+    }
+
+    .hero-container a button {
+        padding: 12px 25px;  /* smaller button for phone */
+        font-size: 14px;
+    }
+}
 }
 
 .hero-container {
