--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Vos Créations</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <style>
         /* Floating shapes animation */
@@ -56,7 +57,7 @@
     overflow: hidden;
     padding-top: 60px;  /* space from top */
     z-index: 1;
-    background-image: url('image.jpg');
+    background-image: url('6caa159a93be95af84cca3ea88c78bcd.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
