--- a/portfolio.html
+++ b/portfolio.html
@@ -41,8 +41,8 @@
 <div class="page-container">
     <h1>Our Portfolio</h1>
     <div class="grid">
-        <img src="https://via.placeholder.com/150x150?text=Design1" alt="Design1">
-        <img src="https://via.placeholder.com/150x150?text=Design2" alt="Design2">
+        <img src="https://via.placeholder.com/150x150?text=Design1" alt="bitmap_115145.png">
+        <img src="https://via.placeholder.com/150x150?text=Design2" alt="FLYER_023017.png">
         <img src="https://via.placeholder.com/150x150?text=Design3" alt="Design3">
         <img src="https://via.placeholder.com/150x150?text=Design4" alt="Design4">
         <img src="https://via.placeholder.com/150x150?text=Design5" alt="Design5">
